--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
                 const list = matchedVideos.map(v => `
                   <div class="videoCard">
-                    <img src="${SERVER}/thumbnails/${v.thumbnail || `${v.id}.jpg`}" alt="thumb">
+                    <img src="${SERVER}/thumbnails/${v.thumbnail || `${v.id}.jpg`}" alt="thumb"><br>
                     <b>${v.title}</b><br>
                     ${new Date(v.date).toLocaleString("ja-JP", {
                       year: "numeric",
