--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                         alt="icon"
                         style="width: 40px; height: 40px; object-fit: cover; border-radius: 5px; margin-right: 8px;">
                       <a href="user?name=${encodeURIComponent(v.username)}">
-                        → ${v.username}'s page
+                        ${v.username}
                       </a>
                     </div>
                   </div>
