--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   <meta property="og:url" content="https://videos.bird.f5.si">
   <script src="js/config.js"></script>
   <script src="js/storage.js"></script>
+  <script src="js/dark.js"></script>
+  <link rel="stylesheet" href="css/dark.css" type="text/css">
   <link rel="icon" href="favicon.ico">
   <style>
     .userEntry {
@@ -41,6 +43,7 @@
 </head>
 <body>
   <a href="./"><img src="logo.png" alt="logo" width="200" height="100"></a>
+  <p><button onclick="toggleTheme()" id="themeBtn">🌞 Light Mode</button></p>
   <table>
     <tr>
       <th><a href="you">My page</a></th>
