--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 </head>
 <body>
   <a href="./"><img src="logo.png" alt="logo" width="200" height="100"></a>
-  <p><button onclick="toggleTheme()" id="themeBtn">🌞 Light Mode</button></p>
+  <p><button onclick="toggleTheme()" id="themeBtn">Light Mode</button></p>
   <table>
     <tr>
       <th><a href="you">My page</a></th>
