--- a/404.html
+++ b/404.html
@@ -11,13 +11,15 @@
     <title>couldn't find the page</title>
 
     <link rel="icon" href="favicon.ico">
+    <script src="js/dark.js"></script>
+    <link rel="stylesheet" href="css/dark.css" type="text/css">
 
 </head>
 
 <body>
 
     <a href="./"><img src="https://videos.bird.f5.si/logo.png" alt="logo" width="200" height="100"></a>
-
+    <p><button onclick="toggleTheme()" id="themeBtn">Light Mode</button></p>
     <p><font color="red">Pikko and Pikko Videos couldn't find the page you were looking for.</font></p>
 
 </body>
