--- a/about.html
+++ b/about.html
@@ -7,10 +7,13 @@
 <meta property="og:description" content="This is a video posting service.">
 <meta property="og:url" content="https://videos.bird.f5.si">
 <meta name="viewport" content="width=device-width,initial-scale=1">
+    <script src="js/dark.js"></script>
+    <link rel="stylesheet" href="css/dark.css" type="text/css">
     <link rel="icon" href="favicon.ico">
   </head>
   <body>
     <a href="./"><img src="logo.png" alt="logo" width="200" height="100"></a>
+    <p><button onclick="toggleTheme()" id="themeBtn">Light Mode</button></p>
     <h1>What service is this?</h1>
     <p>This is a video posting service.</p>
     <p><a href="https://videos.bird.f5.si/terms">terms of service is here</a></p>
