--- a/signup.html
+++ b/signup.html
@@ -10,10 +10,13 @@
 <meta name="viewport" content="width=device-width,initial-scale=1">
   <script src="js/config.js"></script>
   <script src="js/storage.js"></script>
+  <script src="js/dark.css"></script>
+  <link rel="stylesheet" href="css/dark.css" type="text/css">
   <link rel="icon" href="favicon.ico">
 </head>
 <body>
   <a href="./"><img src="logo.png" alt="logo" width="200" height="100"></a>
+  <p><button onclick="toggleTheme()" id="themeBtn">Light Mode</button></p>
   <h1>signup</h1>
   <input id="username" placeholder="name"><br>
   <input id="password" type="password" placeholder="password"><br>
