--- a/terms.html
+++ b/terms.html
@@ -3,14 +3,17 @@
   <head>
     <title>terms of service - Pikko Videos</title>
     <meta name="description" content="terms of service">
-<meta property="og:title" content="Pikko Videos">
-<meta property="og:description" content="terms of service">
-<meta property="og:url" content="https://videos.bird.f5.si">
-<meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta property="og:title" content="Pikko Videos">
+    <meta property="og:description" content="terms of service">
+    <meta property="og:url" content="https://videos.bird.f5.si">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <script src="js/dark.js"></script>
+    <link rel="stylesheet" href="css/dark.css" type="text/css">
     <link rel="icon" href="favicon.ico">
   </head>
   <body>
     <a href="./"><img src="logo.png" alt="logo" width="200" height="100"></a>
+    <p><button onclick="toggleTheme()" id="themeBtn">Light Mode</button></p>
     <h1>terms</h1>
     <p>･By using this service, you are deemed to have agreed to the terms of use of this service (hereinafter referred to as the "These terms").</p>
      <p>･By signing up, users are automatically published online.</p>
