--- a/user.html
+++ b/user.html
@@ -9,6 +9,8 @@
   <meta property="og:url" content="https://videos.bird.f5.si">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <script src="js/config.js"></script>
+  <script src="js/dark.js"></script>
+  <link rel="stylesheet" href="css/dark.css" type="text/css">
   <link rel="icon" href="favicon.ico">
   <style>
     .videoCard {
@@ -38,6 +40,7 @@
 </head>
 <body>
   <a href="./"><img src="logo.png" alt="logo" width="200" height="100"></a>
+  <p><button onclick="toggleTheme()" id="themeBtn">Light Mode</button></p>
   <p><input type="button" value="share" onclick="copyUrl()"></p>
   <select id="sortOrder" onchange="loadVideos()" style="margin-bottom: 10px;">
     <option value="new">Newest first</option>
