--- a/you.html
+++ b/you.html
@@ -10,9 +10,12 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <script src="js/config.js"></script>
   <script src="js/storage.js"></script>
+  <script src="js/dark.js"></script>
+  <link rel="srtylesheet" href="css/dark.css" type="text/css">
 </head>
 <body>
   <a href="./"><img src="https://videos.bird.f5.si/logo.png" alt="logo" width="200" height="100"></a>
+  <p><button onclick="toggleTheme()" id="themeBtn">Light Mode</button></p>
   <p><input type="button" value="share" onclick="copyUrl()"></p>
 
   <h1>My page</h1>
