--- a/you.html
+++ b/you.html
@@ -11,7 +11,7 @@
   <script src="js/config.js"></script>
   <script src="js/storage.js"></script>
   <script src="js/dark.js"></script>
-  <link rel="srtylesheet" href="css/dark.css" type="text/css">
+  <link rel="stylesheet" href="css/dark.css" type="text/css">
 </head>
 <body>
   <a href="./"><img src="https://videos.bird.f5.si/logo.png" alt="logo" width="200" height="100"></a>
