--- a/signup.html
+++ b/signup.html
@@ -4,13 +4,13 @@
   <meta charset="UTF-8" />
   <title>signup - Pikko Videos</title>
   <meta name="description" content="Let's start!">
-<meta property="og:title" content="Pikko Videos">
-<meta property="og:description" content="Let's start!">
-<meta property="og:url" content="https://videos.bird.f5.si">
-<meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta property="og:title" content="Pikko Videos">
+  <meta property="og:description" content="Let's start!">
+  <meta property="og:url" content="https://videos.bird.f5.si">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
   <script src="js/config.js"></script>
   <script src="js/storage.js"></script>
-  <script src="js/dark.css"></script>
+  <script src="js/dark.js"></script>
   <link rel="stylesheet" href="css/dark.css" type="text/css">
   <link rel="icon" href="favicon.ico">
 </head>
