--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <script src="js/config.js"></script>
   <script src="js/storage.js"></script>
   <script src="js/dark.js"></script>
+  <link rel="stylesheet" href="css/animation.css" type="text/css">
   <link rel="stylesheet" href="css/dark.css" type="text/css">
   <link rel="icon" href="favicon.ico">
   <style>
@@ -41,7 +42,7 @@
     }
   </style>
 </head>
-<body>
+<body class="bg-animation">
   <a href="./"><img src="logo.png" alt="logo" width="200" height="100"></a>
   <p><button onclick="toggleTheme()" id="themeBtn">Light Mode</button></p>
   <table>
