--- a/404.html
+++ b/404.html
@@ -12,11 +12,12 @@
 
     <link rel="icon" href="favicon.ico">
     <script src="js/dark.js"></script>
+    <link rel="stylesheet" href="css/animation.css" type="text/css">
     <link rel="stylesheet" href="css/dark.css" type="text/css">
 
 </head>
 
-<body>
+<body class="bg-animation">
 
     <a href="./"><img src="https://videos.bird.f5.si/logo.png" alt="logo" width="200" height="100"></a>
     <p><button onclick="toggleTheme()" id="themeBtn">Light Mode</button></p>
