--- a/about.html
+++ b/about.html
@@ -3,15 +3,16 @@
   <head>
     <title>about - Pikko Videos</title>
     <meta name="description" content="This is a video posting service.">
-<meta property="og:title" content="Pikko Videos">
-<meta property="og:description" content="This is a video posting service.">
-<meta property="og:url" content="https://videos.bird.f5.si">
-<meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta property="og:title" content="Pikko Videos">
+    <meta property="og:description" content="This is a video posting service.">
+    <meta property="og:url" content="https://videos.bird.f5.si">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <script src="js/dark.js"></script>
+    <link rel="stylesheet" href="css/animation.css" type="text/css">
     <link rel="stylesheet" href="css/dark.css" type="text/css">
     <link rel="icon" href="favicon.ico">
   </head>
-  <body>
+  <body class="bg-animation">
     <a href="./"><img src="logo.png" alt="logo" width="200" height="100"></a>
     <p><button onclick="toggleTheme()" id="themeBtn">Light Mode</button></p>
     <h1>What service is this?</h1>
