--- a/terms.html
+++ b/terms.html
@@ -8,10 +8,11 @@
     <meta property="og:url" content="https://videos.bird.f5.si">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <script src="js/dark.js"></script>
+    <link rel="stylesheet" href="css/animation.css" type="text/css">
     <link rel="stylesheet" href="css/dark.css" type="text/css">
     <link rel="icon" href="favicon.ico">
   </head>
-  <body>
+  <body class="bg-animation">
     <a href="./"><img src="logo.png" alt="logo" width="200" height="100"></a>
     <p><button onclick="toggleTheme()" id="themeBtn">Light Mode</button></p>
     <h1>terms</h1>
