--- a/user.html
+++ b/user.html
@@ -10,6 +10,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <script src="js/config.js"></script>
   <script src="js/dark.js"></script>
+  <link rel="stylesheet" href="css/animation.css" type="text/css">
   <link rel="stylesheet" href="css/dark.css" type="text/css">
   <link rel="icon" href="favicon.ico">
   <style>
@@ -38,7 +39,7 @@
     }
   </style>
 </head>
-<body>
+<body class="bg-animation">
   <a href="./"><img src="logo.png" alt="logo" width="200" height="100"></a>
   <p><button onclick="toggleTheme()" id="themeBtn">Light Mode</button></p>
   <p><input type="button" value="share" onclick="copyUrl()"></p>
