--- a/watch.html
+++ b/watch.html
@@ -11,6 +11,7 @@
   <script>const SERVER = "https://pikko1.tcpexposer.com";</script>
   <script src="https://unpkg.com/wavesurfer.js"></script>
   <script src="js/dark.js"></script>
+  <link rel="stylesheet" href="css/animation.css" type="text/css">
   <link rel="stylesheet" href="css/dark.css" type="text/css">
   <style>
     body {
@@ -44,7 +45,7 @@
     }
   </style>
 </head>
-<body>
+<body class="bg-animation">
   <a href="./"><img src="logo.png" alt="logo" width="200" height="100" /></a>
   <p><button onclick="toggleTheme()" id="themeBtn">Light Mode</button></p>
   <table>
