--- a/you.html
+++ b/you.html
@@ -11,9 +11,10 @@
   <script src="js/config.js"></script>
   <script src="js/storage.js"></script>
   <script src="js/dark.js"></script>
+  <link rel="stylesheet" href="css/animation.css" type="text/css">
   <link rel="stylesheet" href="css/dark.css" type="text/css">
 </head>
-<body>
+<body class="bg-animation">
   <a href="./"><img src="https://videos.bird.f5.si/logo.png" alt="logo" width="200" height="100"></a>
   <p><button onclick="toggleTheme()" id="themeBtn">Light Mode</button></p>
   <p><input type="button" value="share" onclick="copyUrl()"></p>
